Styled index page, polished star rating and fixed bugs where default image for recipe was not showing and bug where star rating was returning NaN giving an error on the first user starred

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -10,44 +10,40 @@ div h2 {
 }
 
 
-.rating {
+.stars {
 
-  direction: rtl;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.star {
-  color: #c5c5c5;
-  cursor: pointer;
+  left: 0;
   top: 0;
-  margin: auto;
-  font-size: 25px;
-  height: 35px;
-  margin: auto;
-  position: relative;
-  padding: 0;
+  margin: 10px;
+  height: 30px;
+  color: #c5c5c5;
+  fill: #c5c5c5;
+  cursor: pointer;
+  font-size: 19px;
+  position: absolute;
   overflow: hidden;
-  text-shadow: 0px 1px 0 #a2a2a2;
-  z-index: 0;
+
+  z-index: 10;
 }
 .bottom-star {
+
   position: absolute;
-  top: 0px;
-  margin: auto;
-  z-index: 1;
-  color: yellow;
-  cursor: pointer;
-  font-size: 25px;
-  height: 35px;
-  margin: auto;
-  padding: 0;
+  white-space: nowrap;
+  left: 0;
+  top: 0;
   overflow: hidden;
-  text-shadow: 0px 1px 0 #a2a2a2;
+
+  height: 30px;
+  z-index: 11;
+  color: #ffff00;
+  cursor: pointer;
+  font-size: 19px;
+
+
   pointer-events:none
 }
 .star-color {
-   color: yellow;
+   color: #fff999;
 }
 
 div p {
@@ -103,23 +99,8 @@ hr.style-two {
 .hovereffect img {
   display: block;
   position: relative;
-  -webkit-transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
-  transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
-}
-
-.hovereffect h2 {
-  text-transform: uppercase;
-  color: #fff;
-  text-align: center;
-  position: relative;
-  font-size: 17px;
-  background: rgba(0,0,0,0.6);
-  -webkit-transform: translatey(-100px);
-  -ms-transform: translatey(-100px);
-  transform: translatey(-100px);
-  -webkit-transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
-  transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
-  padding: 10px;
+  -webkit-transition: all 0.4s cubic-bezier(0,-0, 0, 1.81);
+  transition: all 0.5s cubic-bezier(0,0, 0, 1.81);
 }
 
 .hovereffect a.info {
@@ -131,9 +112,9 @@ hr.style-two {
   background-color: transparent;
   opacity: 0;
   filter: alpha(opacity=0);
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  margin: 50px 0 0;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  margin: 30% 0 0;
   padding: 7px 14px;
 }
 
@@ -184,14 +165,20 @@ hr.style-two {
 
 
   .card {
+    border-radius: 10px;
+    position: relative;
     box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.1), 0 0.5px 10px 0 rgba(0, 0, 0, 0.14);
   }
   .card-img-top {
     width: 100%;
-    height: 43vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 30vh;
     object-fit: cover;
   }
   .card-img-top:after {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     content: "";
     display: block;
     padding-bottom: 100%;
@@ -213,11 +200,47 @@ hr.style-two {
   .special {
     max-width: 100%
   }
+  .fa-eye {
+    color: #FE4042;
+  }
+
+  .recipe-title {
+    left: 50%;
+    top: 27vh;
+    transform: translateX(-50%);
+    position: absolute;
+    font-size: 1.7vh;
+    font-weight: 600;
+    padding: 10px;
+    margin: auto;
+    color: white;
+    border-radius: 3px;
+    text-transform: uppercase;
+    background-color: #60A531;
+    width: fit-content;
+  }
+
+  .recipe-view {
+    color: #FE4042;
+    font-weight: 300;
+  }
+  .recipe-view:hover {
+    transition: ease-in-out 1s;
+    ;
+    color: #ff2b2e;
+  }
 
   .title {
-    background-color: #f9f9f9;
+
+    width: 100%;
+    border-radius: 3px;
+    background-color: #60A531;
+    color: white;
   }
   .fluid-container {
+    background-color: #f9f9f9;
+  }
+  .fluid-container:nth-of-type(3){
     background-color: #f9f9f9;
   }
 
@@ -258,8 +281,8 @@ hr.style-two {
 }
 
 .recipe-image {
-  width: 2vw;
-  height: 2vw;
+  width: 1.3vw;
+  height: 1.3vw;
   border-radius: 50%;
   object-fit: cover;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 10px 0 rgba(0, 0, 0, 0.19);
